testsuite/parser_tests/fail/cond_cycles_err.0.psl
if(){
}

if(1) {

} else(2) {}

while();

for(1 in 0:100) {

}
